<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    tools:context="com.example.drinksafe.ContactUs"
    android:background="@drawable/appbackground"
    android:orientation="vertical"
    android:weightSum="1">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Pleasecompletecontact"
        android:id="@+id/tvContactInfo"
        android:ems="20"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25dp"
        android:textColor="#ff17161e" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tvEmailPopulated"
        android:layout_weight="0.08"
        android:autoText="true"
        android:background="#ffffff" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/entersubject"
        android:id="@+id/tvSubject"
        android:textSize="25dp"
        android:layout_weight="0.05" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etSubject"
        android:layout_weight="0.08"
        android:background="#ffffff" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/entermessage"
        android:id="@+id/tvMessage"
        android:textSize="25dp"
        android:layout_weight="0.06" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etMessage"
        android:textSize="25dp"
        android:layout_weight="0.27"
        android:background="#ffffff"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addname"
        android:textSize="25dp"
        android:id="@+id/textView"
        android:layout_marginTop="5sp"
        android:textIsSelectable="false"
        android:layout_weight="0.08" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
<TableRow>
    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/etName"
    android:layout_weight="0.08"
    android:background="#ffffffff"
    android:text="Enter Email Address" />
    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/etEmail"
    android:layout_weight="0.08"
    android:background="#ffffffff"
        android:text="Enter Name" />
</TableRow>
    </TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/btnAdd"
        android:background="#ff9e9e9e"
        android:layout_marginTop="10dp"/>
        <!--android:onClick="newName"/>-->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendemail"
        android:id="@+id/btnSend"
        android:background="#ff9e9e9e"
       android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainmenu"
        android:id="@+id/btnMain"
        android:background="#ff9e9e9e" />

</LinearLayout>
